<resources>
    <string name="app_name">InfyStore</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Email</string>
    <string name="remember_password">Remember Password</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_account">Account</string>
    <string name="privacy_policy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_detail">Product Detail</string>
    <string name="dummy_desc">"Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum DollarvLorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar Lorem Ipsum Dollar "</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="go_to_cart">Go To Cart</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="update">Update</string>
    <string name="welcome">Welcome</string>
</resources>