<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.infy.infystore.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_home_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_nav_home_to_nav_cart"
            app:destination="@id/nav_cart" />
    </fragment>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.infy.infystore.ui.Cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_cartFragment_to_purchaseFragment"
            app:destination="@id/purchaseFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/productDetailFragment"/>
    </fragment>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.infy.infystore.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.infy.infystore.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_nav_account_to_nav_home"
            app:destination="@id/nav_home"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/mobile_navigation"/>
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.infy.infystore.ui.home.productDetail.ProductDetailFragment"
        android:label="@string/product_detail"
        tools:layout="@layout/fragment_product_detail">
        <action
            android:id="@+id/action_productDetailFragment_to_nav_cart"
            app:destination="@id/nav_cart"
            app:popUpToInclusive="true"
            app:popUpTo="@id/productDetailFragment"/>
        <action
            android:id="@+id/action_productDetailFragment_to_purchaseFragment"
            app:destination="@id/purchaseFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/productDetailFragment"/>

    </fragment>
    <fragment
        android:id="@+id/purchaseFragment"
        android:name="com.infy.infystore.ui.home.PurchaseFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_purchase" >
        <action
            android:id="@+id/action_purchaseFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:launchSingleTop="true"
            app:popUpToInclusive="true"
            app:popUpTo="@id/mobile_navigation"/>
    </fragment>

</navigation>